# docs/swagger.yaml
@@ -70,7 +70,11 @@ definitions:
     type: object
   model.Setup2FaResult:
     properties:
+      enabled:
+        type: boolean
       qr_code:
+        type: string
+      qr_code_image:
         type: string
       secret:
         type: string
@@ -132,8 +136,6 @@ definitions:
         type: string
       two_factor_enabled:
         type: boolean
-      two_factor_secret:
-        type: string
       two_factor_verified_at:
         type: string
       updatedAt:
